syntax = "proto3";
package containers;

/*
type = 'r-containers'
origin = server
 */
message RContainers {
  map<string, RContainer> containers = 1;
}

/*
type = 'scan-r-container'
origin = client
 */
message ScanRContainer {
  string nfc_id = 1;
}

/*
type = 'scanned-r-container'
origin = server
 */
message ScannedRContainer {
  string nfc_id = 1;
  uint64 date_created = 2;
}

/*
type = 'load-r-container-info'
origin = client
 */
message LoadRContainerInfo {
  string nfc_id = 1;
}

/*
type = 'r-container-info'
origin = server
 */
message RContainerInfo {
  string nfc_id = 1;
  string origin_seller = 2;
  string origin_location = 3;
  int32 food_g = 4;
  int32 waste_saved_g = 5;
  int32 co2_saved_g = 6;
}

/*
type = 'load-r-container-mass'
origin = client
 */
message LoadRContainerMass {
  string nfc_id = 1;
}

/*
type = 'r-container-mass'
origin = server
 */
message RContainerMass {
  string nfc_id = 1;
  repeated TimePoint mass = 2;
}

/*
type = 'load-r-container-impact'
origin = client
 */
message LoadRContainerImpact {
  string nfc_id = 1;
}

/*
type = 'r-container-impact'
origin = server
 */
message RContainerImpact {
  string nfc_id = 1;
  repeated TimePoint waste = 2;
  repeated TimePoint co2 = 3;
}

/*
type = 'load-r-container-purchases'
origin = client
 */
message LoadRContainerPurchases {
  string nfc_id = 1;
}

/*
type = 'r-container-purchases'
origin = server
 */
message RContainerPurchases {
  string nfc_id = 1;
  repeated Purchase purchases = 2;
}


message RContainer {
  string nfc_id = 1;
  string name = 2;
  uint64 date_created = 3;
}

message TimePoint {
  uint64 time = 1;
  float value = 2;
}

message Purchase {
  uint64 date = 1;
  string item = 2;
  float price = 3;
}